--- a/index.html
+++ b/index.html
@@ -132,6 +132,6 @@ iconutil -c icns icon.iconset
         </div>
     </div>
 
-    <script src="icon_editor.js"></script>
+    <script type="module" src="icon_editor.js"></script>
 </body>
 </html>
